# data_tool

./: README.md
data-tool/: pyproject.toml  tox.ini
data-tool/data_tool/: __init__.py  cleaning.py  encoding.py  scaling.py
data-tool/data_tool.egg-info/: PKG-INFO  SOURCES.txt
data-tool/examples/: basic_usage.py  processed_data.csv
data-tool/tests/: test_cleaning.py  test_encoding.py  test_scaling.py
