[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-tool"
version = "0.1.0"
description = "Data preprocessing and cleaning toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0",
    "numpy>=1.18",
    "scikit-learn>=1.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/data-tool"
Repository = "https://github.com/yourusername/data-tool"
Documentation = "https://github.com/yourusername/data-tool#readme"

[tool.setuptools.packages.find]
where = ["."]  # Искать пакеты в текущей директории
include = ["data_tool*"]  # Включать все пакеты, начинающиеся с data_tool
